--- a/layouts/index.html
+++ b/layouts/index.html
@@ -33,6 +33,12 @@
         <a class="button button-primary mb-2" href="{{ .Site.Params.homepage_button_link_study | relURL }}">
           {{ .Site.Params.homepage_button_text_study }}
         </a>
+        <a class="button button-primary mb-2" href="{{ .Site.Params.homepage_button_link_datastrucure | relURL }}">
+          {{ .Site.Params.homepage_button_text_datastructure }}
+        </a>
+        <a class="button button-primary mb-2" href="{{ .Site.Params.homepage_button_link_cloudbasic | relURL }}">
+          {{ .Site.Params.homepage_button_text_cloudbasic }}
+        </a>
       </div>
     </div>
   </div>
