--- a/layouts/index.html
+++ b/layouts/index.html
@@ -39,6 +39,9 @@
         <a class="button button-primary mb-2" href="{{ .Site.Params.homepage_button_link_gitstudy | relURL }}">
           {{ .Site.Params.homepage_button_text_gitstudy }}
         </a>
+        <a class="button button-primary mb-2" href="{{ .Site.Params.homepage_button_link_python | relURL }}">
+          {{ .Site.Params.homepage_button_text_python }}
+        </a>
       </div>
     </div>
   </div>
