--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,6 +42,12 @@
         <a class="button button-primary mb-2" href="{{ .Site.Params.homepage_button_link_python | relURL }}">
           {{ .Site.Params.homepage_button_text_python }}
         </a>
+        <a class="button button-primary mb-2" href="{{ .Site.Params.homepage_button_link_djangoboard | relURL }}">
+          {{ .Site.Params.homepage_button_text_djangoboard }}
+        </a>
+        <a class="button button-primary mb-2" href="{{ .Site.Params.homepage_button_link_djangotodo | relURL }}">
+          {{ .Site.Params.homepage_button_text_djangotodo }}
+        </a>
       </div>
     </div>
   </div>
